--- a/loja_app/templates/loja_app/base.html
+++ b/loja_app/templates/loja_app/base.html
@@ -34,7 +34,20 @@
     </div>
   </div>
 
-  <!-- Sidebar -->
+<!-- Subtopbar -->
+<div class="subtopbar">
+  <ul class="subtopbar-links">
+    <li><a href="#">Categorias</a></li>
+    <li><a href="#">Whey Protein</a></li>
+    <li><a href="#">Creatina</a></li>
+    <li><a href="#">Pre Treino</a></li>
+    <li><a href="#">Emagrecedores</a></li>
+    <li><a href="#">Acessórios</a></li>
+    <li><a href="#">Marcas</a></li>
+  </ul>
+</div>
+
+<!-- Sidebar -->
   <div id="sidebar" class="sidebar">
       <div class="logo-container">
         <img src="{% static 'img/imagem_nutri.png' %}" alt="Logo Nutri Amorim" class="logo-img">
