adicionanando novos cardes configurando sistma de compras 27

--- a/loja_app/templates/loja_app/conhecimento_na_pratica.html
+++ b/loja_app/templates/loja_app/conhecimento_na_pratica.html
@@ -9,23 +9,109 @@
 <div class="card-container">
   <!-- Card 1 -->
   <div class="card">
-    <h2>Nivelamento de Anatomia</h2>
+    <h2>Espaço Calouro Nutrição</h2>
     <p>Estudos sobre SUS, vigilância em saúde, políticas públicas e indicadores de saúde.</p>
     <a class="btn-download" href="#">📄 Material em breve</a>
   </div>
 
   <!-- Card 2 -->
   <div class="card">
-    <h2>Bioquímica</h2>
+    <h2>Preparesse para profissão Nutrição</h2>
     <p>Resumo sobre metabolismo de macronutrientes, vitaminas e ciclo de Krebs.</p>
     <a class="btn-download" href="#">📄 Material em breve</a>
   </div>
 
   <!-- Card 3 -->
   <div class="card">
-    <h2>Projeto GEPIS</h2>
+    <h2>Saúde Coletiva</h2>
     <p>Pesquisa acadêmica com foco nas práticas integrativas e complementares em saúde.</p>
     <a class="btn-download" href="#">📄 Material em breve</a>
   </div>
-</div>
+
+   <!-- Card 3 -->
+  <div class="card">
+    <h2>Biossegurança e Bioética</h2>
+    <p>Pesquisa acadêmica com foco nas práticas integrativas e complementares em saúde.</p>
+    <a class="btn-download" href="#">📄 Material em breve</a>
+  </div>
+
+  <div class="card">
+    <h2>Bioestatística e Epidemiologia</h2>
+    <p>Pesquisa acadêmica com foco nas práticas integrativas e complementares em saúde.</p>
+    <a class="btn-download" href="#">📄 Material em breve</a>
+  </div>
+
+
+  <div class="card">
+    <h2>GO Projeto de Vida</h2>
+    <p>Pesquisa acadêmica com foco nas práticas integrativas e complementares em saúde.</p>
+    <a class="btn-download" href="#">📄 Material em breve</a>
+  </div>
+
+  <div class="card">
+    <h2>Nivelamento de Anatomia</h2>
+    <p>Pesquisa acadêmica com foco nas práticas integrativas e complementares em saúde.</p>
+    <a class="btn-download" href="#">📄 Material em breve</a>
+  </div>
+
+  <div class="card">
+    <h2>Projeto de ensino plágio não rola 1</h2>
+    <p>Pesquisa acadêmica com foco nas práticas integrativas e complementares em saúde.</p>
+    <a class="btn-download" href="#">📄 Material em breve</a>
+  </div>
+
+  <div class="card">
+    <h2>Projeto de ensino portal de recursos</h2>
+    <p>Pesquisa acadêmica com foco nas práticas integrativas e complementares em saúde.</p>
+    <a class="btn-download" href="#">📄 Material em breve</a>
+  </div>
+
+  <div class="card">
+    <h2>Projeto de ensino pesquisa no mercado para tomada de decisões</h2>
+    <p>Pesquisa acadêmica com foco nas práticas integrativas e complementares em saúde.</p>
+    <a class="btn-download" href="#">📄 Material em breve</a>
+  </div>
+
+  <div class="card">
+    <h2>Curso de elaboração de Projetos de IC 1</h2>
+    <p>Pesquisa acadêmica com foco nas práticas integrativas e complementares em saúde.</p>
+    <a class="btn-download" href="#">📄 Material em breve</a>
+  </div>
+
+  <div class="card">
+    <h2>Conhecimentos Gerais</h2>
+    <p>Pesquisa acadêmica com foco nas práticas integrativas e complementares em saúde.</p>
+    <a class="btn-download" href="#">📄 Material em breve</a>
+  </div>
+
+  <div class="card">
+    <h2>Análise e interpretação de gráficos e tabelas</h2>
+    <p>Pesquisa acadêmica com foco nas práticas integrativas e complementares em saúde.</p>
+    <a class="btn-download" href="#">📄 Material em breve</a>
+  </div>
+
+  <div class="card">
+    <h2>Nivelamento de Português</h2>
+    <p>Pesquisa acadêmica com foco nas práticas integrativas e complementares em saúde.</p>
+    <a class="btn-download" href="#">📄 Material em breve</a>
+  </div>
+
+  <div class="card">
+    <h2>Curso de elaboração de projetos de IC 2</h2>
+    <p>Pesquisa acadêmica com foco nas práticas integrativas e complementares em saúde.</p>
+    <a class="btn-download" href="#">📄 Material em breve</a>
+  </div>
+
+  <div class="card">
+    <h2>Projeto de ensino plágio não rola 2</h2>
+    <p>Pesquisa acadêmica com foco nas práticas integrativas e complementares em saúde.</p>
+    <a class="btn-download" href="#">📄 Material em breve</a>
+  </div>
+
+  <div class="card">
+    <h2>Nivelamento de Matemática</h2>
+    <p>Pesquisa acadêmica com foco nas práticas integrativas e complementares em saúde.</p>
+    <a class="btn-download" href="#">📄 Material em breve</a>
+  </div>
+  </div>
 {% endblock %}
